# dream-open

./: .gitignore  .gitmodules  main.py  requirements.txt  robot.py  settings.json
.github/workflows/: build_core.yaml  build_lidar.yaml  check_nano.yaml  ci.yaml
arduino_nano/: .gitignore  platformio.ini
arduino_nano/include/: Button.h  Buttons.h  Const.h  Const.h.example  Dribling.h  Emitter.h  Gyro.h  Kicker.h  Motors.h  Robot.h
arduino_nano/src/: Button.cpp  Dribling.cpp  Emitter.cpp  Gyro.cpp  Kicker.cpp  Motors.cpp  Robot.cpp  main.cpp
core/: .gitignore  CLAUDE.md  CMakeLists.txt  TODO.md  black-backup-field.json  black-backup-home.json  config-backup-black-5000.json  config-backup-black-6000.json  config-backup-green-6000.json  config.backup.black  config.backup.green  config.example.json  config.json  config.json.example  green-backup-field.json  green-backup-home.json  green-backup-hs.json  green-backup-train.json
core/include/: camera.h  config.h  field_dims.h  robot.h  uart.h
core/include/config/: brake_profile.h  config.h  gpio.h  lidar.h  serial.h  strategy.h  to_vector.h  tracking.h  visualization.h
core/include/config/strategy/: attacker.h  ball_filter.h  control.h  dubins.h  keeper.h  kickoff.h  line.h  meme.h
core/include/gpio/: buttons.h  buzzer.h  display.h  setup.h
core/include/hardware/: buzzer.h
core/include/media/: img.h  music.h  r2d2.h
core/include/strategy/: accel_drive.h  ball_filter.h  ball_tracker.h  brake_mode.h  brake_type.h  dubins.h  field.h  hobubu.h  kick.h  kurwa.h  motion.h  obstacles.h  segment.h  spin_pipeline.h  spin_shot.h  strategy.h  test.h  turn.h  vigilans.h  visualization.h  zones.h
core/include/tracking/: ball.h  camera.h  object.h
core/include/utils/: config.h  init_guard.h  lidar.h  mapper.h  millis.h  nmap.h  polygon.h  precision.h  sleep.h  switch.h  uart.h  vec.h
core/include/utils/geo/: circle.h  polygon.h  precision.h  vec.h
core/src/: camera.cpp  config.cpp  main.cpp  robot.cpp  uart.cpp  vec.cpp
core/src/config/: brake_profile.cpp  config.cpp  gpio.cpp  lidar.cpp  serial.cpp  strategy.cpp  tracking.cpp  visualization.cpp
core/src/config/strategy/: attacker.cpp  ball_filter.cpp  control.cpp  dubins.cpp  keeper.cpp  kickoff.cpp  line.cpp  meme.cpp
core/src/gpio/: buttons.cpp  buzzer.cpp  display.cpp  setup.cpp
core/src/gpio_mock/: buttons.cpp  buzzer.cpp  display.cpp  setup.cpp
core/src/hardware/: buzzer.h
core/src/media/: evangelion.cpp  img.cpp  music.cpp  r2d2.cpp
core/src/strategy/: accel_drive.cpp  attacker.cpp  ball_filter.cpp  ball_tracker.cpp  challenge.cpp  dubins.cpp  field.cpp  hobubu.cpp  keeper.cpp  kick.cpp  kickoff.cpp  kurwa.cpp  out.md  segment.cpp  spin_pipeline.cpp  spin_shot.cpp  strategy.cpp  test.cpp  turn.cpp  vigilans.cpp  visualization.cpp  zones.cpp
core/src/strategy/common/: accelerated_dribbling.cpp  compute_ricochet.cpp  drive_ball.cpp  drive_target.cpp  dubins_hit.cpp  hit.cpp  kick.cpp  kick_dir.cpp  kick_to_goal.cpp  obstacles.cpp  ricochet.cpp  stabilize_capture.cpp  take_ball.cpp  turn.cpp
core/src/strategy/roles/: attacker.cpp  challenge.cpp  keeper.cpp  kickoff.cpp  line.cpp  meme.cpp  test.cpp  test_mirror.cpp
core/src/tracking/: ball.cpp  camera.cpp  camera_mock.cpp  object.cpp
core/src/utils/: config.cpp  lidar.cpp  mapper.cpp  millis.cpp  nmap.cpp  polygon.cpp  precision.cpp  sleep.cpp  switch.cpp  uart.cpp  vec.cpp
core/src/utils/geo/: circle.cpp  polygon.cpp  precision.cpp  vec.cpp
img_generator/: .gitignore  main.py
lidar/: CMakeLists.txt  CMakePresets.json  Makefile  main  main.cpp
models/: field.py
modules/: camera.py  lidar.py  uart.py
modules/camera/: calibration_data.json  camera.py  camera_cv2.py  tracking_object.py
modules/menu/: buttons.py  display.py  menu.py
path_planning/: algorithms.py  dynamic_robot_sim_pg.py  field.py  models copy.py  models.py  potential_field.py  robot.py  visualization.py
python_core/: main.py  requirements.txt  settings.json
python_core/modules/: lidar.py
python_core/modules/camera/: camera.py  tracking_object.py
python_core/modules/menu/: buzzer.py
python_core/path_planning/: models.py
python_core/scripts/: uart_ports.py
rpi_4b/camera/: camera.py
scripts/: arg_parser.py  json_parser.py  settings_control.py  uart_ports.py
